# amorelli-sec-edgar-mcp

./: .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  SECURITY.md  USAGE_EXAMPLES.md  VERSIONING.md  mypy.ini  pyproject.toml  setup_environments.sh
.github/workflows/: ci.yml  docker-publish.yml  lint.yml  publish_conda.yml  publish_pypi.yml
conda/: README.md  bld.bat  meta.yaml  post-link.bat  post-link.sh
sec_edgar_mcp/: __init__.py  config.py  document_parser.py  server.py
sec_edgar_mcp/core/: __init__.py  client.py  models.py
sec_edgar_mcp/tools/: __init__.py  company.py  filings.py  financial.py  insider.py  insider_complex.py  types.py
sec_edgar_mcp/utils/: __init__.py  cache.py  constants.py  exceptions.py
