[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-edgar-mcp"
version = "0.1.0"
description = "SEC EDGAR MCP server for company filings and financial data"
authors = [{name = "Stefano Amorelli", email = "stefano@amorelli.tech"}]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["mcp[cli]>=1.6.0", "secedgar"]

[tool.setuptools]
packages = ["sec_edgar_mcp"]

[project.urls]
"Homepage" = "https://github.com/amorelli/sec-edgar-mcp"
"Bug Tracker" = "https://github.com/amorelli/sec-edgar-mcp/issues"
